# raptor-lookahead-movement-model

./: .gitignore  README.md  README.rst  environment.yml  kalman_filter_old.py  pyproject.toml  setup.cfg
bayesfilt/: __init__.py  animation.py  animation_tools.py  cca.py  ctra.py  ctrv.py  cvm.py  derived_linear_motion_models.py  extended_kalman_filter.py  kalman_filter.py  kalman_filter_base.py  linear_measurement_models.py  linear_motion_model.py  linear_motion_models.py  linear_observation_model.py  motion_model.py  nonlinear_motion_model.py  nonlinear_motion_models.py  nonlinear_observation_model.py  observation_model.py  sigma_points.py  state_space_model.py  traffic_intersection.py  unscented_kalman_filter.py  unscented_kf.py  unscented_transform.py  utils.py
bayesfilt/filters/: __init__.py  _base_filter.py  _filter_base.py  _logger.py  _metrics.py  _variables.py  extended_kalman_filter.py  filter_attributes_dynamic.py  filter_attributes_static.py  kalman_filter.py  (+5 more)
examples/: 1_convert_all_to_dataframe.ipynb  ca_calibration.ipynb  ca_prediction.ipynb  check.ipynb  csg_cr_annotate.py  csg_resample_ks.py  csg_vr_annotate.py  cvm_calibration.ipynb  paper_relations.ipynb  simulate_tracks.py
notebooks/: 0_generate_data.ipynb  1_KFvsEKFvsUKF_using_cv.ipynb  1_ca_check.ipynb  1_ctrv_check.ipynb  1_cv_check.ipynb  1_cv_newone.ipynb  2_metrics_vs_model_error.ipynb  ekf_simple.ipynb  kalman_filter_check.ipynb  kf_ctrv.ipynb  kf_cv2D.ipynb  kf_simple.ipynb  uff_ctrv_check.ipynb  ukf_cv1D.ipynb  ukf_vs_kf_check.ipynb  unscented_transform_check.ipynb  ut_simple.ipynb
(+87 files in other folders)
