[metadata]
name = bayesfilt
version = 0.0.1
license = BSD 3-Clause License
license_file = LICENSE.txt
# keywords = 
description = Suite of Bayesian algorithms
long_description = file: README.rst
author = Rimple Sandhu
author_email = rimple.sandhu@outlook.com
# url = https://github.com/NREL/SSRS
platforms = any
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
[options]
packages = find:
include_package_data = True
install_requires =
        matplotlib
        numpy
        scipy
        pandas
        pathos
        tqdm
        pyarrow
        shapely
        opencv
python_requires = >=3.12
[options.packages.find]
where = .
exclude =
    telemetry*
